New DB model to support delete job
- Update the openapi.yaml for MP
